--- a/he/calendar/chrome/branding/brand.properties
+++ b/he/calendar/chrome/branding/brand.properties
@@ -1,5 +1,5 @@
-brandShortName=Calendar
-brandFullName=Calendar
+brandShortName=לוח שנה
+brandFullName=לוח שנה
 vendorShortName=Mozilla
 
 # LOCALIZATION NOTE (releaseNotesURL):
