--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -83,7 +83,8 @@ compactingFolder                = Porządkowanie folderu %S…
 doneCompacting                  = Porządkowanie zakończone
 autoCompactAllFoldersTitle      = Porządkowanie folderów
 autoCompactAllFolders           = Czy uporządkować wszystkie lokalne i dostępne w trybie offline foldery?
-autoCompactAllFoldersCheckbox   = Nie pytaj o to ponownie
+autoCompactAlwaysAskCheckbox    = Zawsze pytaj przed automatycznym porządkowaniem folderów
+compactNowButton                = &Uporządkuj
 
 confirmFolderDeletionForFilter  = Usunięcie folderu "%S" spowoduje zablokowanie wszystkich filtrów powiązanych z folderem. Czy na pewno usunąć wybrany folder?
 alertFilterChanged              = Filtry powiązane z tym folderem zostaną zaktualizowane.
