--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -85,7 +85,8 @@ compactingFolder=Map %S comprimeren…
 doneCompacting=Klaar met comprimeren
 autoCompactAllFoldersTitle=Mappen comprimeren
 autoCompactAllFolders=Wilt u alle lokale en offlinemappen comprimeren om schijfruimte te besparen?
-autoCompactAllFoldersCheckbox=Dit vanaf nu automatisch doen.
+autoCompactAlwaysAskCheckbox=Mij altijd vragen voor automatisch mappen comprimeren
+compactNowButton=&Nu comprimeren
 
 confirmFolderDeletionForFilter=Het verwijderen van de map ‘%S’ zal de filters die ermee zijn verbonden uitschakelen. Weet u zeker dat u deze map wilt verwijderen?
 alertFilterChanged=De filters die met deze map zijn verbonden zullen worden bijgewerkt.
