--- a/he/mail/chrome/messenger/oeImportMsgs.properties
+++ b/he/mail/chrome/messenger/oeImportMsgs.properties
@@ -34,9 +34,34 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+
+#
+# The following are used by the outlook express import code to display status/error 
+# and informational messages
+#
+
+# Short name of import module
+## @name OEIMPORT_NAME
+## @loc None
+## LOCALIZATION NOTE (2000): DONT_TRANSLATE
 2000 = Outlook Express
-2001 = דואר ופנקסי כתובות של Outlook Express
+
+### 2001 = דואר ופנקסי כתובות של Outlook Express
+
+# Description of import module
+## @name OEIMPORT_DESCRIPTION
+## @loc None
+## LOCALIZATION NOTE (2011): In this item, don't translate "Outlook Express"
+2011=דואר של Outlook Express, ספרי כתובות, והגדרות
+
+# Success message
+## @name OEIMPORT_MAILBOX_SUCCESS
+## @loc None
+## LOCALIZATION NOTE (2002): In this item, don't translate "%S" or "%d"
+## The variable %S will contain the name of the Mailbox
+## The variable %d will contain the number of messages
 2002 = תיבת דואר %S, יובאו %d הודעות
+
 2003 = פרמטר שגוי הועבר ליבוא תיבת דואר.
 2004 = שגיאה בגישה לקובץ עבור תיבת דואר %S.
 2005 = שגיאה ביבוא תיבת דואר %S, יתכן ולא כל ההודעות יובאו מתיבת דואר זו.
