--- a/he/mail/chrome/messenger/outlookImportMsgs.properties
+++ b/he/mail/chrome/messenger/outlookImportMsgs.properties
@@ -34,8 +34,32 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
-2000 = Outlook
-2001 = דואר ופנקסי כתובות של Outlook
+
+
+# The following are used by the outlook express import code to display status/error 
+# and informational messages
+#
+
+# Short name of import module
+## @name OUTLOOKIMPORT_NAME
+## @loc None
+## LOCALIZATION NOTE (2000): DONT_TRANSLATE
+2000=Outlook
+
+###2001 = דואר ופנקסי כתובות של Outlook
+
+# Description of import module
+## @name OUTLOOKIMPORT_DESCRIPTION
+## @loc None
+## LOCALIZATION NOTE (2010): In this item, don't translate "Outlook"
+2010=דואר של Outlook, ספרי כתובות, והגדרות
+
+# Success message
+## @name OUTLOOKIMPORT_MAILBOX_SUCCESS
+## @loc None
+## LOCALIZATION NOTE (2002): In this item, don't translate "%S" or "%d"
+## The variable %S will receive the name of the mailbox
+## The variable %d will receive the number of messages
 2002 = תיבת דואר %S, יובאו %d הודעות
 2003 = פרמטר שגוי הועבר ליבוא תיבת דואר.
 2004 = שגיאה ביבוא תיבת דואר %S, יתכן ולא כל ההודעות יובאו מתיבת דואר זו.
