--- a/ca/mail/chrome/messenger/messenger.properties
+++ b/ca/mail/chrome/messenger/messenger.properties
@@ -84,7 +84,8 @@ compactingFolder=S'està compactant la carpeta %S…
 doneCompacting=S'ha acabat la compactació
 autoCompactAllFoldersTitle=Compacta les carpetes
 autoCompactAllFolders=Voleu compactar totes les carpetes locals i de fora de línia per estalviar espai de disc?
-autoCompactAllFoldersCheckbox=Fes-ho automàticament a partir d'ara.
+autoCompactAlwaysAskCheckbox=Sempre pregunta'm abans de compactar automàticament les carpetes
+compactNowButton=Compacta-les &ara
 
 confirmFolderDeletionForFilter=Si suprimiu la carpeta «%S» n'inhabilitareu els filtres associats. Esteu segur que voleu suprimir la carpeta?
 alertFilterChanged=Els filtres associats amb aquesta carpeta s'actualitzaran.
@@ -159,6 +160,7 @@ draftsFolderName=Esborranys
 templatesFolderName=Plantilles
 outboxFolderName=Safata de sortida
 junkFolderName=Correu brossa
+archivesFolderName=Arxius
 
 specialFolderDeletionErr=En comptes IMAP no es pot suprimir la carpeta especial %S
 specialFolderDeletionErrTitle=Supressió de la carpeta especial
