--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -88,7 +88,8 @@ compactingFolder=Komprimerar mappen %S…
 doneCompacting=Komprimering slutförd
 autoCompactAllFoldersTitle=Komprimera mappar
 autoCompactAllFolders=Vill du komprimera alla mappar (de lokala och de replikerade) för att spara diskutrymme?
-autoCompactAllFoldersCheckbox=Gör detta automatiskt i fortsättningen.
+autoCompactAlwaysAskCheckbox=Fråga alltid innan automatisk komprimering av mappar.
+compactNowButton=Komprimera &nu
 
 confirmFolderDeletionForFilter=Om du tar bort mappen ”%S” kommer berörda filterregler att sättas ur spel. Är du säker på att du vill ta bort mappen?
 alertFilterChanged=Berörda filterregler kommer att modifieras.
@@ -172,6 +173,7 @@ draftsFolderName=Utkast
 templatesFolderName=Mallar
 outboxFolderName=Utkorgen
 junkFolderName=Skräp
+archivesFolderName=Arkiv
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
