--- a/sq/mail/chrome/messenger/messenger.properties
+++ b/sq/mail/chrome/messenger/messenger.properties
@@ -43,7 +43,7 @@ compactingFolder=Po ngjishet dosja %S…
 doneCompacting=Ngjeshja u bë
 autoCompactAllFoldersTitle=Ngjishi Dosjet
 autoCompactAllFolders=Doni të ngjeshen tërë dosjet vendore dhe ato "offline" për të kursyer vend në disk?
-autoCompactAllFoldersCheckbox=Tani e tutje bëje këtë vetvetiu.
+autoCompactAlwaysAskCheckbox=Pyetmë përherë përpara se të ngjeshen dosjet vetvetiu
 
 confirmFolderDeletionForFilter=Fshirja e dosjes '%S' do të çaktivizojë filtrat që i shoqërohen. Jeni i sigurt se doni të fshini dosjen?
 alertFilterChanged=Filtrat e shoqëruar kësaj dosje do të përditësohen.
@@ -326,3 +326,6 @@ processingJunkMessages=Po trajtohen Mesazhet Hedhurinë
 headerFieldYou=Ju
 # The what's new tab title, shown on version update
 whatsNew=Ç'ka të Re
+
+archivesFolderName=Arkiva
+compactNowButton=Ngjeshi &Tani
