--- a/sq/mail/chrome/messenger/news.properties
+++ b/sq/mail/chrome/messenger/news.properties
@@ -14,6 +14,8 @@ enterUsername=Ju lutem jepni një emër përdoruesi për hyrje në shërbyes laj
 enterPassword=Ju lutem jepni fjalëkalim për hyrje në shërbyes lajmesh:
 enterPasswordTitle=Lypset Fjalëkalim Shërbyesi Lajmesh
 okButtonText=Shkarko
+enterUsernameTitle=Lypset Emër Përdoruesi Për Te Shërbyesi i Lajmeve
+saveUsername=Për mbajtjen mend të kësaj vlere përdor Përgjegjës Fjalëkalimesh.
 
 noNewMessages=Nuk ka mesazhe të rinj në shërbyes.
 downloadingHeaders=Po shkarkohet i %S-i nga %S titujt
