--- a/fr/calendar/updater/updater.ini
+++ b/fr/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Mise à jour de Sunbird
-Info=Sunbird installe les mises à jour et démarrera dans quelques instants…
+Title=Mise à jour du logiciel
+InfoText=%MOZ_APP_DISPLAYNAME% installe les mises à jour et démarrera dans quelques instants…
