--- a/pl/calendar/updater/updater.ini
+++ b/pl/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Aktualizacja oprogramowania
-Info=Sunbird instaluje aktualizacje i uruchomi się za chwilę…
+InfoText=%MOZ_APP_DISPLAYNAME% instaluje aktualizacje i uruchomi się za chwilę…
