--- a/id/mail/chrome/messenger-mapi/mapi.properties
+++ b/id/mail/chrome/messenger-mapi/mapi.properties
@@ -17,5 +17,5 @@ errorMessage = %S tidak dapat diatur sebagai aplikasi pembaca email Anda karena 
 errorMessageNews = %S tidak dapat diatur sebagai aplikasi pembaca news Anda karena key registry tidak dapat diperbarui. Pastikan bahwa Anda mempunyai hak akses menulis ke registry dengan menghubungi administrator sistem Anda dan kemudian coba lagi.
 errorMessageTitle = %S
 mapiBlindSendWarning = Aplikasi lain mencoba untuk mengirim email berdasarkan profil pengguna Anda. Yakin akan mengirim email?
-mapiBlindSendDontShowAgain = Peringatkan saya jika aplikasi lain mencoba mengirim email dari saya sendiri
+mapiBlindSendDontShowAgain = Peringatkan jika aplikasi lain mencoba mengirim email dari saya sendiri
 defaultMailDisplayTitle = %S
