--- a/uk/mail/installer/override.properties
+++ b/uk/mail/installer/override.properties
@@ -67,22 +67,22 @@ CancelBtn=Скасувати
 CloseBtn=&Закрити
 BrowseBtn=О&гляд …
 ShowDetailsBtn=&Докладніше…
-ClickNext=Натисніть кнопку 'Далі' для продовження.
-ClickInstall=Натисніть кнопку 'Встановити', щоб встановити програму.
-ClickUninstall=Натисніть кнопку 'Вилучити', щоб вилучити програму.
+ClickNext=Натисніть кнопку «Далі» для продовження.
+ClickInstall=Натисніть кнопку «Встановити», щоб встановити програму.
+ClickUninstall=Натисніть кнопку «Вилучити», щоб вилучити програму.
 Completed=Гаразд
 LicenseTextRB=Перед встановленням $(^NameDA) ознайомтесь з ліцензійною угодою. Якщо ви приймаєте умови угоди, оберіть відповідний варіант із наведених нижче. $_CLICK
 ComponentsText=Виберіть компоненти програми, котрі ви хочете встановити. $_CLICK
 ComponentsSubText2_NoInstTypes=Виберіть компоненти програми для встановлення:
-DirText=Програма встановить $(^NameDA) у наступну теку. Щоб встановити в іншу теку, натисніть "Огляд" та вкажіть її. $_CLICK
+DirText=Програма встановить $(^NameDA) у наступну теку. Щоб встановити в іншу теку, натисніть «Вибрати» та вкажіть її. $_CLICK
 DirSubText=Тека встановлення
 DirBrowseText=Виберіть теку для встановлення $(^NameDA):
 SpaceAvailable="Доступно на диску: "
 SpaceRequired="Необхідно на диску: "
 UninstallingText=Програму $(^NameDA) буде вилучено з наступної теки. $_CLICK
 UninstallingSubText=Вилучення з:
-FileError=Неможливо відкрити файл для запису:\n\n\n"$0"\n\n"Перервати": зупинити встановлення;\n"Повтор": повторити спробу;\n"Пропуск": пропустити цю дію.
-FileError_NoIgnore=Неможливо відкрити файл для запису:\n\n\n"$0"\n\n'Повтор': повторити спробу;\n'Скасувати': скасувати процес встановлення.
+FileError=Неможливо відкрити файл для запису:\n\n\n"$0"\n\n«Перервати»: зупинити встановлення;\n«Повтор»: повторити спробу;\n«Пропуск»: пропустити цю дію.
+FileError_NoIgnore=Неможливо відкрити файл для запису:\n\n\n"$0"\n\n«Повтор»: повторити спробу;\n«Скасувати»: скасувати процес встановлення.
 CantWrite="Неможливо записати: "
 CopyFailed=Помилка при копіюванні
 CopyTo="Копіювання в "
