--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -288,6 +288,7 @@ confirmViewDeleteTitle   = Potwierdź
 confirmViewDeleteMessage = Czy na pewno usunąć ten widok wiadomości?
 
 # For virtual folders
+confirmSavedSearchTitle         = Potwierdź usuwanie
 confirmSavedSearchDeleteMessage = Czy na pewno usunąć ten folder wyszukiwania?
 
 passwordPrompt         = Wprowadź hasło dla %1$S na %2$S:
