--- a/nl/mail/chrome/messenger/news.properties
+++ b/nl/mail/chrome/messenger/news.properties
@@ -47,6 +47,8 @@ cancelDisallowed=Dit bericht lijkt niet van u te zijn. U kunt alleen uw eigen be
 cancelConfirm=Weet u zeker dat u dit bericht wilt annuleren?
 messageCancelled=Bericht geannuleerd.
 enterUsername=Voer een gebruikersnaam in voor de nieuwsserver:
+enterUsernameTitle=Nieuwsservergebruikersnaam vereist
+saveUsername=Wachtwoordenbeheerder gebruiken om deze waarde te onthouden.
 enterPassword=Geef uw wachtwoord voor toegang tot deze nieuwsserver:
 enterPasswordTitle=Nieuwsserverwachtwoord vereist
 okButtonText=Downloaden
