--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -362,6 +362,7 @@ confirmViewDeleteTitle=Bevestigen
 confirmViewDeleteMessage=Weet u zeker dat u deze weergave wilt verwijderen?
 
 # for virtual folders
+confirmSavedSearchTitle=Verwijderen bevestigen
 confirmSavedSearchDeleteMessage=Weet u zeker dat u deze bewaarde zoekopdracht wilt verwijderen?
 
 ## @name ENTER_PASSWORD_PROMPT
