--- a/fr/mail/chrome/messenger/importMsgs.properties
+++ b/fr/mail/chrome/messenger/importMsgs.properties
@@ -274,9 +274,14 @@
 2134=Divers 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Notes
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Nom de l'écran
 
 #Error strings
 ImportAlreadyInProgress=Une opération d'importation est en cours; essayez à nouveau lorsque cette opération sera terminée.
