--- a/vi/mail/chrome/messenger/news.properties
+++ b/vi/mail/chrome/messenger/news.properties
@@ -59,7 +59,7 @@ downloadingFilterHeaders=Đang lấy đầu đề cho bộ lọc: %S (%S/%S)
 downloadingArticles=Đang tải tin bài %S-%S
 bytesReceived=Đang tải nhóm tin: Đã nhận %S (đã đọc %SKB ở tốc độ %SKB/sec)
 checkingForNewNews=Đang kiểm tra thư mới của nhóm tin %S trên tổng %S trên %S
-downloadingArticlesForOffline=Đang tải tin bài %S-%S in %S
+downloadingArticlesForOffline=Đang tải tin các bài %S-%S trên tổng %S
 
 onlyCancelOneMessage=Bạn chỉ có thể hủy bỏ một tin bài trong một thời điểm.
 
