--- a/vi/mail/chrome/messenger/activity.properties
+++ b/vi/mail/chrome/messenger/activity.properties
@@ -28,31 +28,31 @@ failedToSendMessageTo=Thất bại khi gửi thư tới %S
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
 # Place the word %2$S in your translation where the total number of pending messages should appear.
 # Place the word %3$S in your translation where the name of the folder being processed should appear.
-autosyncProcessProgress=Downloading %1$S of %2$S in %3$S
+autosyncProcessProgress=Đang tải %1$S trên tổng %2$S trong %3$S
 # LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
-autosyncProcessDisplayText=Bringing folder %S up to date
+autosyncProcessDisplayText=Đang cập nhật thư mục %S
 # LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
-autosyncEventDisplayText=%S is up to date
+autosyncEventDisplayText=%S đã được cập nhật
 # LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
-autosyncEventStatusText=Total number of messages downloaded: %S
-autosyncEventStatusTextNoMsgs=No messages downloaded
+autosyncEventStatusText=Tổng số thư đã tải: %S
+autosyncEventStatusTextNoMsgs=Không có thư nào được tải
 # LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
-autosyncContextDisplayText=Synchronizing: %S
+autosyncContextDisplayText=Đang đồng bộ: %S
 
 # Message actions that show up in activity manager
 # LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Deleted #1 message;Deleted #1 messages
+deletedMessages=Đã xóa #1 thư
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
-movedMessages=Moved #1 message from #2 to #3;Moved #1 messages from #2 to #3
+movedMessages=Đã di chuyển #1 thư từ #2 sang #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
-copiedMessages=Copied #1 message from #2 to #3;Copied #1 messages from #2 to #3
+copiedMessages=Đã chép #1 thư từ #2 sang #3
 # LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
-fromServerToServer=from #1 to #2
+fromServerToServer=từ #1 sang #2
 # LOCALIZATION NOTE (deletedFolder): #1 folder name
-deletedFolder=Deleted folder #1
+deletedFolder=Đã xóa thư mục #1
 # LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
-movedFolder=Moved folder #1 into folder #2
+movedFolder=Đã di chuyển thư mục #1 vào thư mục #2
 # LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
-copiedFolder=Copied folder #1 into folder #2
+copiedFolder=Đã chép thư mục #1 vào thư mục #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
-renamedFolder=Renamed folder #1 to #2
+renamedFolder=Đã đổi tên thư mục #1 thành #2
