Add Mobile and Calendar, update some strings from Browser and Mail

--- a/vi/calendar/chrome/calendar/dateFormat.properties
+++ b/vi/calendar/chrome/calendar/dateFormat.properties
@@ -11,14 +11,16 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org code.
+# The Original Code is OEone Calendar Code, released October 31st, 2001.
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
-# the Initial Developer. All Rights Reserved.
+# OEone Corporation.
+# Portions created by OEone Corporation are Copyright (C) 2001
+# OEone Corporation. All Rights Reserved.
 #
 # Contributor(s):
+#   Garth Smedley <garths@oeone.com>
+#   Martin Schroeder <mschroeder@mozilla.x-home.org>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -34,38 +36,58 @@
 #
 # ***** END LICENSE BLOCK *****
 
-#
-# The following are used by libmime for header display in XML & HTML
-#
-TO=Tới
-# LOCALIZATION NOTE (BCC); DONT_TRANSLATE
-BCC=BCC
-# LOCALIZATION NOTE (CC); DONT_TRANSLATE
-CC=CC
-DATE=Ngày
-DISTRIBUTION=Phân phối
-# LOCALIZATION NOTE (FCC); DONT_TRANSLATE
-FCC=FCC
-FOLLOWUP-TO=Trả lời Tin tại
-FROM=Từ
-STATUS=Trạng thái
-LINES=Dòng
-MESSAGE-ID=ID Thư
-MIME-VERSION=Phiên bản MIME
-NEWSGROUPS=Nhóm tin
-ORGANIZATION=Tổ chức
-REFERENCES=Tham khảo
-REPLY-TO=Trả lời Tới
-RESENT-COMMENTS=Gửi tiếp - Bình luận
-RESENT-DATE=Gửi tiếp - Ngày
-RESENT-FROM=Gửi tiếp - Từ
-RESENT-MESSAGE-ID=Gửi tiếp - ID Thư
-RESENT-SENDER=Gửi tiếp - Nhờ
-RESENT-TO=Gửi tiếp - Tới
-# LOCALIZATION NOTE (RESENT-CC); Do not translate "CC"
-RESENT-CC=Gửi tiếp - CC
-SENDER=Người gửi Cho
-SUBJECT=Tiêu đề
-APPROVED-BY=Chấp-thuận-Bởi
-USER-AGENT=Chương Trình Gửi
-FILENAME=Tên tập tin
+month.1.Mmm=Thg01
+month.2.Mmm=Thg02
+month.3.Mmm=Thg03
+month.4.Mmm=Thg04
+month.5.Mmm=Thg05
+month.6.Mmm=Thg06
+month.7.Mmm=Thg07
+month.8.Mmm=Thg08
+month.9.Mmm=Thg09
+month.10.Mmm=Thg10
+month.11.Mmm=Thg11
+month.12.Mmm=Thg12
+
+month.1.name=Tháng Một
+month.2.name=Tháng Hai
+month.3.name=Tháng Ba
+month.4.name=Tháng Tư
+month.5.name=Tháng Năm
+month.6.name=Tháng Sáu
+month.7.name=Tháng Bảy
+month.8.name=Tháng Tám
+month.9.name=Tháng Chín
+month.10.name=Tháng Mười
+month.11.name=Tháng Mười Một
+month.12.name=Tháng Mười Hai
+
+day.1.name=Chủ Nhật
+day.2.name=Thứ Hai
+day.3.name=Thứ Ba
+day.4.name=Thứ Tư
+day.5.name=Thứ Năm
+day.6.name=Thứ Sáu
+day.7.name=Thứ Bảy
+
+day.1.Mmm=ChN
+day.2.Mmm=Th2
+day.3.Mmm=Th3
+day.4.Mmm=Th4
+day.5.Mmm=Th5
+day.6.Mmm=Th6
+day.7.Mmm=Th7
+
+# Can someone tell me why we're not counting from zero?
+day.1.short=CN
+day.2.short=T2
+day.3.short=T3
+day.4.short=T4
+day.5.short=T5
+day.6.short=T6
+day.7.short=T7
+
+noon=Trưa
+midnight=Nửa đêm
+
+AllDay=Cả Ngày
