--- a/vi/calendar/chrome/calendar/migration.properties
+++ b/vi/calendar/chrome/calendar/migration.properties
@@ -11,14 +11,15 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org code.
+# The Original Code is Calendar migration code.
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
+#   Joey Minta <jminta@gmail.com>
+# Portions created by the Initial Developer are Copyright (C) 2006
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
+#   Matthew Willis <lilmatt@mozilla.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -34,38 +35,12 @@
 #
 # ***** END LICENSE BLOCK *****
 
-#
-# The following are used by libmime for header display in XML & HTML
-#
-TO=Tới
-# LOCALIZATION NOTE (BCC); DONT_TRANSLATE
-BCC=BCC
-# LOCALIZATION NOTE (CC); DONT_TRANSLATE
-CC=CC
-DATE=Ngày
-DISTRIBUTION=Phân phối
-# LOCALIZATION NOTE (FCC); DONT_TRANSLATE
-FCC=FCC
-FOLLOWUP-TO=Trả lời Tin tại
-FROM=Từ
-STATUS=Trạng thái
-LINES=Dòng
-MESSAGE-ID=ID Thư
-MIME-VERSION=Phiên bản MIME
-NEWSGROUPS=Nhóm tin
-ORGANIZATION=Tổ chức
-REFERENCES=Tham khảo
-REPLY-TO=Trả lời Tới
-RESENT-COMMENTS=Gửi tiếp - Bình luận
-RESENT-DATE=Gửi tiếp - Ngày
-RESENT-FROM=Gửi tiếp - Từ
-RESENT-MESSAGE-ID=Gửi tiếp - ID Thư
-RESENT-SENDER=Gửi tiếp - Nhờ
-RESENT-TO=Gửi tiếp - Tới
-# LOCALIZATION NOTE (RESENT-CC); Do not translate "CC"
-RESENT-CC=Gửi tiếp - CC
-SENDER=Người gửi Cho
-SUBJECT=Tiêu đề
-APPROVED-BY=Chấp-thuận-Bởi
-USER-AGENT=Chương Trình Gửi
-FILENAME=Tên tập tin
+migratingApp = Đang di chuyển %1$S…
+
+# The next two lines are duplicated from migration.dtd until there is branding
+# for lightning
+migrationTitle = %1$S: Nhập Dữ Liệu
+migrationDescription=%1$S có thể nhập dữ liệu lịch từ nhiều chương trình thông dụng. Đã tìm thấy dữ liệu từ các chương trình sau trên máy tính của bạn. Vui lòng chọn chương trình mà bạn muốn nhập dữ liệu.
+finished = Hoàn tất
+disableExtTitle = Tìm thấy Phần mở rộng Không tương thích
+disableExtText = Máy bạn đã có Phần mở rộng Mozilla Calendar, không tương thích với Lightning. Nó sẽ bị vô hiệu hóa và %1$S sẽ khởi động lại.
