--- a/vi/calendar/chrome/calendar/providers/wcap/wcap.properties
+++ b/vi/calendar/chrome/calendar/providers/wcap/wcap.properties
@@ -11,14 +11,15 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org code.
+# The Original Code is Sun Microsystems code.
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
+# Sun Microsystems, Inc.
+# Portions created by the Initial Developer are Copyright (C) 2007
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
+#   Daniel Boelzle <daniel.boelzle@sun.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -34,38 +35,22 @@
 #
 # ***** END LICENSE BLOCK *****
 
-#
-# The following are used by libmime for header display in XML & HTML
-#
-TO=Tới
-# LOCALIZATION NOTE (BCC); DONT_TRANSLATE
-BCC=BCC
-# LOCALIZATION NOTE (CC); DONT_TRANSLATE
-CC=CC
-DATE=Ngày
-DISTRIBUTION=Phân phối
-# LOCALIZATION NOTE (FCC); DONT_TRANSLATE
-FCC=FCC
-FOLLOWUP-TO=Trả lời Tin tại
-FROM=Từ
-STATUS=Trạng thái
-LINES=Dòng
-MESSAGE-ID=ID Thư
-MIME-VERSION=Phiên bản MIME
-NEWSGROUPS=Nhóm tin
-ORGANIZATION=Tổ chức
-REFERENCES=Tham khảo
-REPLY-TO=Trả lời Tới
-RESENT-COMMENTS=Gửi tiếp - Bình luận
-RESENT-DATE=Gửi tiếp - Ngày
-RESENT-FROM=Gửi tiếp - Từ
-RESENT-MESSAGE-ID=Gửi tiếp - ID Thư
-RESENT-SENDER=Gửi tiếp - Nhờ
-RESENT-TO=Gửi tiếp - Tới
-# LOCALIZATION NOTE (RESENT-CC); Do not translate "CC"
-RESENT-CC=Gửi tiếp - CC
-SENDER=Người gửi Cho
-SUBJECT=Tiêu đề
-APPROVED-BY=Chấp-thuận-Bởi
-USER-AGENT=Chương Trình Gửi
-FILENAME=Tên tập tin
+# args: host
+accessingServerFailedError.text=Không thể truy cập máy chủ %1$S!
+loginFailed.text=Đăng nhập thất bại hoặc do ID phiên làm việc bất hợp lệ.
+accessDenied.text=Người dùng bị từ chối truy cập.
+
+# args: host
+noHttpsConfirmation.text=Đăng nhập không an toàn trên %1$S!\nVẫn tiếp tục?
+noHttpsConfirmation.check.text=Đừng hỏi lại.
+noHttpsConfirmation.label=Cảnh báo!
+
+# args: host, prodId, serverVersion, wcapVersion
+insufficientWcapVersionConfirmation.text=Máy chủ %1$S (%2$S, v%3$S, WCAP v%4$S) không hỗ trợ một phiên bản WCAP đầy đủ! Cần có ít nhất là phiên bản 3.0.0.\nVẫn tiếp tục?
+insufficientWcapVersionConfirmation.label=Phiên bản WCAP không đầy đủ!
+
+loginDialog.label=Yêu cầu Mật khẩu Máy chủ Lịch
+
+privateItem.title.text=Riêng tư
+confidentialItem.title.text=Bí mật
+busyItem.title.text=Bận
