--- a/vi/mail/chrome/messenger/aboutRights.properties
+++ b/vi/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=Về Quyền Của Bạn
 buttonLabel=Biết thêm về quyền của bạn…
 buttonAccessKey=B
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S là phần mềm mã nguồn mở và tự do từ Quỹ Mozilla phi lợi nhuận.
+notifyRightsText=%S là phần mềm tự do mã nguồn mở từ Quỹ Mozilla phi lợi nhuận.
