--- a/vi/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
+++ b/vi/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
@@ -127,7 +127,7 @@ errorAlertFormat=Mã lỗi %1$S: %2$S\n\n %3$S
 
 ## @name CONNECT_ERROR_HINT
 ## @loc none
-10091=Xác minh xem Tên Máy Chủ và Số Cổng đã đúng chưa, rồi hãy thử lại, hoặc liên hệ với Quản trị viên Hệ thống của bạn. To verify that the Hostname and Port Number are correct, từ trình đơn Chỉnh sửa, chọn Tùy chỉnh, rồi chọn Thư & Nhóm tin, rồi chọn Xác định Địa chỉ. Nhấn Chỉnh sửa Thư mục, và chọn máy chủ LDAP đang dùng. Nhấn Chỉnh sửa để hiển thị Tên Máy Chủ. Nhấn Nâng cao để hiển thị Số Cổng.
+10091=Xác minh xem Tên Máy Chủ và Số Cổng đã đúng chưa, rồi hãy thử lại, hoặc liên hệ với Quản trị viên Hệ thống của bạn. Để xác minh Tên Máy Chủ và Số Cổng, từ trình đơn Chỉnh sửa, chọn Tùy chỉnh, rồi chọn Thư & Nhóm tin, rồi chọn Xác định Địa chỉ. Nhấn Chỉnh sửa Thư mục, và chọn máy chủ LDAP đang dùng. Nhấn Chỉnh sửa để hiển thị Tên Máy Chủ. Nhấn Nâng cao để hiển thị Số Cổng.
 
 ## @name HOST_NOT_FOUND_HINT
 ## @loc none
