--- a/vi/mail/chrome/messenger/localMsgs.properties
+++ b/vi/mail/chrome/messenger/localMsgs.properties
@@ -122,7 +122,7 @@
 # Status - username undefined 
 ## @name POP3_USERNAME_UNDEFINED
 ## @loc None
-4014=Bạn chưa cung cấp tên người dùng cho máy chủ này.  Vui lòng cung cấp một tên trong trình đơn cài đặt tài khoản và thử lại.
+4014=Bạn chưa cung cấp tên người dùng cho máy chủ này.  Vui lòng cung cấp một tên trong trình đơn thiết lập tài khoản và thử lại.
 
 # Status - list failure
 ## @name POP3_LIST_FAILURE
