--- a/vi/mail/chrome/messenger/mime.properties
+++ b/vi/mail/chrome/messenger/mime.properties
@@ -46,33 +46,33 @@
 # Resent-Comments
 ## @name MIME_MHTML_RESENT_COMMENTS
 ## @loc 
-1001=Bình luận - Gửi lại
+1001=Gửi tiếp - Bình luận
 
 # Resent-Date
 ## @name MIME_MHTML_RESENT_DATE
 ## @loc 
-1002=Ngày - Gửi lại
+1002=Gửi tiếp - Ngày
 
 # Resent-Sender
 ## @name MIME_MHTML_RESENT_SENDER
 ## @loc 
-1003=Người gửi - Gửi lại
+1003=Gửi tiếp - Nhờ
 
 # Resent-From
 ## @name MIME_MHTML_RESENT_FROM
 ## @loc 
-1004=Từ - Gửi lại
+1004=Gửi tiếp - Từ
 
 # Resent-To
 ## @name MIME_MHTML_RESENT_TO
 ## @loc 
-1005=Tới - Gửi lại
+1005=Gửi tiếp - Tới
 
 # Resent-CC
 ## @name MIME_MHTML_RESENT_CC
 ## @loc 
 # LOCALIZATION NOTE (1006): Do not translate "CC" below.
-1006=CC - Gửi lại
+1006=Gửi tiếp - CC
 
 # Date
 ## @name MIME_MHTML_DATE
@@ -82,7 +82,7 @@
 # Sender
 ## @name MIME_MHTML_SENDER
 ## @loc 
-1008=Người gửi
+1008=Người gửi Cho
 
 # From
 ## @name MIME_MHTML_FROM
@@ -92,7 +92,7 @@
 # Reply-To
 ## @name MIME_MHTML_REPLY_TO
 ## @loc 
-1010=Trả-lời-Tới
+1010=Trả lời Tới
 
 # Organization
 ## @name MIME_MHTML_ORGANIZATION
@@ -118,7 +118,7 @@
 # Followup-To
 ## @name MIME_MHTML_FOLLOWUP_TO
 ## @loc 
-1015=Theo-sau-Tới
+1015=Trả lời Tin tại
 
 # References
 ## @name MIME_MHTML_REFERENCES
@@ -128,7 +128,7 @@
 # Message ID
 ## @name MIME_MHTML_MESSAGE_ID
 ## @loc 
-1021=ID-Thư
+1021=ID Thư
 
 # BCC
 ## @name MIME_MHTML_BCC
