--- a/vi/calendar/chrome/calendar/calendar-occurrence-prompt.properties
+++ b/vi/calendar/chrome/calendar/calendar-occurrence-prompt.properties
@@ -11,11 +11,11 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org code.
+# The Original Code is Sun Microsystems code.
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
+#   Philipp Kewisch <mozilla@kewis.ch>
+# Portions created by the Initial Developer are Copyright (C) 2008
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
@@ -34,38 +34,19 @@
 #
 # ***** END LICENSE BLOCK *****
 
-#
-# The following are used by libmime for header display in XML & HTML
-#
-TO=Tới
-# LOCALIZATION NOTE (BCC); DONT_TRANSLATE
-BCC=BCC
-# LOCALIZATION NOTE (CC); DONT_TRANSLATE
-CC=CC
-DATE=Ngày
-DISTRIBUTION=Phân phối
-# LOCALIZATION NOTE (FCC); DONT_TRANSLATE
-FCC=FCC
-FOLLOWUP-TO=Trả lời Tin tại
-FROM=Từ
-STATUS=Trạng thái
-LINES=Dòng
-MESSAGE-ID=ID Thư
-MIME-VERSION=Phiên bản MIME
-NEWSGROUPS=Nhóm tin
-ORGANIZATION=Tổ chức
-REFERENCES=Tham khảo
-REPLY-TO=Trả lời Tới
-RESENT-COMMENTS=Gửi tiếp - Bình luận
-RESENT-DATE=Gửi tiếp - Ngày
-RESENT-FROM=Gửi tiếp - Từ
-RESENT-MESSAGE-ID=Gửi tiếp - ID Thư
-RESENT-SENDER=Gửi tiếp - Nhờ
-RESENT-TO=Gửi tiếp - Tới
-# LOCALIZATION NOTE (RESENT-CC); Do not translate "CC"
-RESENT-CC=Gửi tiếp - CC
-SENDER=Người gửi Cho
-SUBJECT=Tiêu đề
-APPROVED-BY=Chấp-thuận-Bởi
-USER-AGENT=Chương Trình Gửi
-FILENAME=Tên tập tin
+header.isrepeating.event.label=là một sự kiện lặp lại
+header.isrepeating.task.label=là một tác vụ lặp lại 
+
+windowtitle.event.delete=Xóa Sự Kiện Lặp Lại
+windowtitle.task.delete=Xóa Tác Vụ Lặp Lại
+windowtitle.event.edit=Chỉnh Sửa Sự Kiện Lặp Lại
+windowtitle.task.edit=Chỉnh Sửa Tác Vụ Lặp Lại
+
+buttons.occurrence.delete.label=Chỉ xóa lần diễn ra này
+buttons.occurrence.edit.label=Chỉ chỉnh sửa lần diễn ra này
+
+buttons.allfollowing.delete.label=Xóa các lần diễn ra bây giờ và trong tương lai
+buttons.allfollowing.edit.label=Chỉnh sửa các lần diễn ra bây giờ và trong tương lai
+
+buttons.parent.delete.label=Xóa tất cả các lần diễn ra
+buttons.parent.edit.label=Chỉnh sửa tất cả các lần diễn ra
