Remove obsolete files from Calendar and update Browser, Mail, Mobile

--- a/vi/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/vi/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=Đang kiểm tra RSS feed…
+subscribe-validating-feed=Đang xác minh feed…
 subscribe-cancelSubscription=Bạn có chắc là bạn muốn hủy bỏ việc đăng kí nhận tin từ feed hiện tại không?
 subscribe-cancelSubscriptionTitle=Đăng kí nhận tin từ một Feed…
-subscribe-noFeedSelected=<chưa chọn RSS feed nào>
+subscribe-noFeedIsSelected=<chưa chọn feed>
 subscribe-feedAlreadySubscribed=Bạn đã đăng kí nhận tin từ feed này rồi.
 subscribe-errorOpeningFile=Không thể mở tập tin.
 
 subscribe-OPMLImportTitle=Chọn tập tin OPML để nhập
 subscribe-OPMLExportTitle=Xuất feed dưới dạng tập tin OPML
-subscribe-OPMLExportFileTitle=Thunderbird Xuất OPML
-subscribe-OPMLExportFileName=ThunderbirdFeedCuaToi.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=Xuất OPML %S
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=Feed%SCuaToi.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=%S không phải là một tập tin OPML hợp lệ hoặc có lỗi trong quá trình nhập tập tin.
 
 subscribe-OPMLExportOPMLFilesFilterText=Tập tin OPML
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Xóa Feed
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Bạn có chắc là bạn muốn dừng theo dõi tin từ feed này không: \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Đang tải bài viết từ feed (%S trên tổng %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Đang tải tin bài của feed (%S trên tổng %S)…
 
 newsblog-noNewArticlesForFeed=Không có bài viết mới cho feed này.
+newsblog-networkErrorTitle=Lỗi Mạng
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=Không thể tìm thấy %S. Vui lòng kiểm tra tên và thử lại.
-newsblog-invalidFeed=%S không phải là một RSS feed hợp lệ.
-newsblog-getNewMailCheck=Kiểm tra RSS feed để xem mục bài mới
-
+newsblog-feedNotValidTitle=Feed Bất Hợp Lệ
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S không phải là feed hợp lệ.
+newsblog-getNewMsgsCheck=Đang kiểm tra các feed để lấy tin bài mới…
