--- a/vi/mail/chrome/messenger/messenger.properties
+++ b/vi/mail/chrome/messenger/messenger.properties
@@ -459,6 +459,11 @@ emptyTrashDontAsk=Đừng hỏi lại tôi nữa.
 junkAnalysisPercentComplete=Phân tích Thư rác đã hoàn tất %S
 processingJunkMessages=Đang xử lí Thư rác
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Không tìm thấy Tập tin
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Tập tin %S không tồn tại.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Bạn
