--- a/vi/mail/chrome/messenger/offline.properties
+++ b/vi/mail/chrome/messenger/offline.properties
@@ -1,12 +1,12 @@
 # Download Messages Prompt
 downloadMessagesWindowTitle1=Tải Thư
 downloadMessagesLabel1=Bạn có muốn tải thư để dùng ngoại tuyến trước khi rời mạng không?
-downloadMessagesCheckboxLabel1=Luôn hỏi tôi mỗi khi tôi rời mạng
+downloadMessagesCheckboxLabel1=Luôn hỏi mỗi khi tôi rời mạng
 
 # Send Messages Prompt
 sendMessagesWindowTitle1=Thư Chưa Gửi
 sendMessagesLabel2=Bạn có muốn gửi những thư chưa gửi của bạn ngay bây giờ không?
-sendMessagesCheckboxLabel1=Luôn hỏi tôi mỗi khi tôi lên mạng
+sendMessagesCheckboxLabel1=Luôn hỏi mỗi khi tôi lên mạng
 
 # GetMessages While Offline Prompt 
 getMessagesOfflineWindowTitle1=Lấy Thư 
