--- a/vi/mail/chrome/messenger/vcard.properties
+++ b/vi/mail/chrome/messenger/vcard.properties
@@ -327,7 +327,7 @@
 # VCARD_LDAP_PHONE_NUMBER
 ## @name VCARD_LDAP_PHONE_NUMBER
 ## @loc None
-1057=Số Điện Thọai
+1057=Số Điện Thoại
 
 # VCARD_LDAP_PHOTOGRAPH
 ## @name VCARD_LDAP_PHOTOGRAPH
@@ -352,4 +352,4 @@
 # VCARD_LDAP_SECRETARY
 ## @name VCARD_LDAP_SECRETARY
 ## @loc None
-1062=Trợ lý Quản trị
+1062=Trợ lí Quản trị
