Update translation: country names...

--- a/vi/mail/chrome/messenger/search-attributes.properties
+++ b/vi/mail/chrome/messenger/search-attributes.properties
@@ -47,7 +47,7 @@
 40=để sẵn cho AB
 41=để sẵn cho AB
 42=để sẵn cho AB
-43=Từ, Tới hoặc CC
+43=Từ, Tới, CC hoặc BCC
 44=Gốc Điểm Thư Rác
 45=Phần trăm Thư rác
 46=Trạng thái Phần đính kèm
