fix typos and accesskeys, add new strings from mail and mobile

--- a/vi/mail/chrome/messenger/messenger.properties
+++ b/vi/mail/chrome/messenger/messenger.properties
@@ -43,6 +43,8 @@ newFolderMenuItem=Thư mục…
 newSubfolderMenuItem=Thư mục con…
 newFolder=Thư mục Mới…
 newSubfolder=Thư mục con Mới…
+markFolderRead=Đánh dấu Thư mục là Đã Đọc;Đánh dấu các Thư mục là Đã Đọc
+markNewsgroupRead=Đánh dấu Nhóm tin là Đã Đọc;Đánh dấu các Nhóm tin là Đã Đọc
 folderProperties=Thuộc tính Thư mục
 newTag=Thẻ tag Mới…
 getNextNMessages=Lấy %S Thư Tiếp Theo
@@ -172,7 +174,6 @@ outboxFolderName=Thư chờ gửi
 junkFolderName=Thư rác
 archivesFolderName=Lưu trữ
 
-
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
 specialFolderDeletionErr=Việc xóa thư mục đặc biệt %S không được phép trên tài khoản IMAP.
@@ -250,7 +251,7 @@ junkScoreOriginImapFlag=Cờ IMAP
 hasAttachments=Có Đính Kèm
 
 # for the Tag picker in search and mail views.
-tag=Thẻ tag
+tag=Nhãn
 
 # mailnews.js
 mailnews.send_default_charset=UTF-8
@@ -308,6 +309,7 @@ nocachedbodytitle=<TITLE>Chuyển sang Trực tuyến để Xem Thư này</TITLE
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Xác nhận Dừng theo dõi
 confirmUnsubscribeText=Bạn có chắc là bạn muốn dừng theo dõi %S không?
+confirmUnsubscribeManyText=Bạn có chắc là bạn muốn dừng theo dõi các nhóm tin này không?
 feedNoSummaryTitle=Feed Không có Tóm tắt
 feedNoSummaryAlert=Feed tin tức này dưới dạng cũ không tóm tắt các tin bài, nên không thể hiển thị tóm tắt.
 
@@ -474,6 +476,11 @@ headerFieldYou=Bạn
 
 # The what's new tab title, shown on version update
 whatsNew=Có Gì Mới
+
+applyToCollapsedMsgsTitle=Xác nhận Xóa các Thư trong Chủ đề Thu gọn
+applyToCollapsedMsgs=Cảnh báo – bạn sẽ xóa các thư trong chủ đề thu gọn
+applyToCollapsedAlwaysAskCheckbox=Luôn hỏi tôi trước khi xóa các thư trong chủ đề thu gọn
+applyNowButton=Áp dụng
 
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
