--- a/vi/mail/chrome/messenger/preferences/preferences.properties
+++ b/vi/mail/chrome/messenger/preferences/preferences.properties
@@ -42,3 +42,9 @@ soundFilePickerTitle=Chọn Âm Thanh
 #### Shell Service
 alreadyDefaultClientTitle=Chương trình Mặc định
 alreadyDefault=%S đã được thiết lập là chương trình gửi thư mặc định của bạn.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Thêm Từ Khóa
+attachmentReminderAddText=Từ khóa:
+attachmentReminderEditDialogTitle=Sửa Từ Khóa
+attachmentReminderEditText=Từ khóa:
