--- a/vi/mail/chrome/messenger/search-attributes.properties
+++ b/vi/mail/chrome/messenger/search-attributes.properties
@@ -11,7 +11,7 @@ Cc=Cc
 ToOrCc=Tới hoặc Cc
 AgeInDays=Ngày tuổi
 SizeKB=Dung lượng (KB)
-Tags=Thẻ Tag
+Tags=Nhãn
 # for AB and LDAP
 AnyName=Tên bất kì
 DisplayName=Tên Hiển Thị
