--- a/vi/mail/chrome/messenger/activity.properties
+++ b/vi/mail/chrome/messenger/activity.properties
@@ -13,16 +13,21 @@ yesterday=Hôm qua
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 #1
 
-# Send Message
+# LOCALIZATION NOTE (sendingMessages): this is used as a title for grouping processes in the activity manager when sending email.
+sendingMessages=Đang gửi Thư
+# LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sendingMessage=Đang gửi Thư
-# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Đang gửi Thư tới %S
+sendingMessageWithSubject=Đang Gửi Thư: %S
+copyMessage=Đang chép thư tới thư mục 'Đã Gửi'
 sentMessage=Thư đã Gửi
-# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Thư đã Gửi tới %S
+# LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sentMessageWithSubject=Thư Đã Gửi: %S
 failedToSendMessage=Thất bại khi gửi thư
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Thất bại khi gửi thư tới %S
+failedToCopyMessage=Không thể sao chép thư
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=Không thể gửi thư: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=Không thể sao chép thư: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
@@ -56,3 +61,24 @@ movedFolder=Đã di chuyển thư mục #1 vào thư mục #2
 copiedFolder=Đã chép thư mục #1 vào thư mục #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
 renamedFolder=Đã đổi tên thư mục #1 thành #2
+indexing=Đang lập chỉ mục thư
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+indexingFolder=Đang lập chỉ mục thư trong #1
+indexingStatusVague=Đang xác định thư nào sẽ được vào chỉ mục
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+indexingFolderStatusVague=Đang xác định thư nào trong #1 sẽ được vào chỉ mục
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+indexingStatusExact=Đang lập chỉ mục cho #1 trên tổng #2 thư;Đang lập chỉ mục cho #1 trên tổng #2 thư (hoàn tất #3%)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+indexingFolderStatusExact=Đang lập chỉ mục cho #1 trên tổng #2 thư trong #4;Đang lập chỉ mục cho #1 trên tổng #2 thư trong #4 (hoàn tất #3%)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+indexedFolder=Đã lập chỉ mục cho #1 thư trong #2;Đã lập chỉ mục cho #1 thư trong #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+indexedFolderStatus=#1 giây đã qua;#1 giây đã qua
