--- a/vi/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/vi/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -268,15 +268,17 @@ saveDlogTitle=Lưu Thư
 saveDlogMessage=Thư chưa được gửi. Bạn có muốn lưu thư trong thư mục Nháp không?
 
 ## generics string
-defaultSubject=(chưa có tiêu đề)
+defaultSubject=(không đề)
 chooseFileToAttach=Đính kèm Tập tin
 
 ##
 windowTitlePrefix=Viết thư:
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Gửi Thư
-subjectDlogMessage=Bạn chưa ghi tiêu đề cho thư này. Nếu bạn muốn, hãy gõ nó ngay bây giờ.
+## String used by the empty subject dialog
+subjectEmptyTitle=Nhắc về Tiêu đề
+subjectEmptyMessage=Thư này chưa có tiêu đề.
+sendWithEmptySubjectButton=&Gửi thư Không có Tiêu đề
+cancelSendingButton=&Hủy việc Gửi
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Tài khoản này chỉ hỗ trợ người nhận email. Nếu tiếp tục thì sẽ bỏ qua nhóm tin.
@@ -327,3 +329,13 @@ mailnews.reply_header_originalmessage=-------- Thư Gốc --------
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Đổi tên Phần đính kèm
 renameAttachmentMessage=Tên phần đính kèm mới:
+
+## Attachment Reminder
+## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
+##   words that that should trigger an attachment reminder.
+mail.compose.attachment_reminder_keywords=đính kèm,gửi kèm,gởi kèm,attach,attachment,.doc,.pdf,lý lịch,lí lịch,resume,résumé,bản cv,tờ cv,thư xin việc
+attachmentReminderTitle=Nhắc về Đính kèm
+attachmentReminderMsg=Bạn có quên thêm phần đính kèm?
+attachmentReminderYesIForgot=Chà, Tôi Quên Mất!
+attachmentReminderFalseAlarm=Không, Gửi Ngay
+
