--- a/vi/mail/chrome/messenger/filter.properties
+++ b/vi/mail/chrome/messenger/filter.properties
@@ -38,7 +38,7 @@ filterAction4=đánh dấu đã đọc
 filterAction5=chủ đề đã xóa
 filterAction6=chủ đề đã xem
 filterAction7=đánh dấu sao
-filterAction8=đã dán tag
+filterAction8=đã dán nhãn
 filterAction9=đã trả lời
 filterAction10=đã chuyển tiếp
 filterAction11=thực thi bị dừng
@@ -47,5 +47,5 @@ filterAction13=để trên máy chủ POP3
 filterAction14=điểm số thư rác
 filterAction15=nội dung được lấy từ máy chủ POP3
 filterAction16=đã chép vào thư mục
-filterAction17=đã dán tag
+filterAction17=đã dán nhãn
 filterAction18=chủ đề con đã bỏ qua
