--- a/vi/mail/chrome/messenger/messenger.properties
+++ b/vi/mail/chrome/messenger/messenger.properties
@@ -46,7 +46,7 @@ newSubfolder=Thư mục con Mới…
 markFolderRead=Đánh dấu Thư mục là Đã Đọc;Đánh dấu các Thư mục là Đã Đọc
 markNewsgroupRead=Đánh dấu Nhóm tin là Đã Đọc;Đánh dấu các Nhóm tin là Đã Đọc
 folderProperties=Thuộc tính Thư mục
-newTag=Thẻ tag Mới…
+newTag=Nhãn Mới…
 getNextNMessages=Lấy %S Thư Tiếp Theo
 advanceNextPrompt=Đi tới thư chưa đọc tiếp theo trong %S?
 titleNewsPreHost=trên
@@ -195,7 +195,7 @@ twoWeeksAgo=Hai tuần trước
 older=Thư Cũ
 
 #Grouped By Tags
-untaggedMessages=Thư không dán tag
+untaggedMessages=Thư không dán nhãn
 
 # Grouped by status
 messagesWithNoStatus=Không trạng thái
@@ -213,7 +213,7 @@ groupFlagged=Gắn sao
 
 # defaults descriptions for tag prefs listed in mailnews.js
 # (we keep the .labels. names for backwards compatibility)
-mailnews.tags.remove=Xóa Tất Cả Tag
+mailnews.tags.remove=Xóa Tất Cả Nhãn
 mailnews.labels.description.1=Quan trọng
 mailnews.labels.description.2=Làm việc
 mailnews.labels.description.3=Cá nhân
@@ -390,10 +390,10 @@ openWindowWarningTitle=Xác nhận
 openWindowWarningText=Mở %S thư có thể sẽ chậm.  Tiếp tục?
 
 # for warning the user that a tag they're trying to create already exists
-tagExists=Tên thẻ tag đã tồn tại.
+tagExists=Tên nhãn đã tồn tại.
 
 # title of the edit tag dialog
-editTagTitle=Chỉnh sửa Thẻ tag
+editTagTitle=Chỉnh Sửa Nhãn
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
