--- a/vi/mail/chrome/messenger/multimessageview.properties
+++ b/vi/mail/chrome/messenger/multimessageview.properties
@@ -1,11 +1,8 @@
 # LOCALIZATION NOTE (selectedNMessages, acrossNThreads): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# #1 number of messages
-# example: Selected: 23 messages
-selectedNMessages=Đã chọn: #1 thư;Đã chọn: #1 thư
-# #1 number of threads
-# example: across 3 threads
-acrossNThreads= gồm #1 chủ đề;gồm #1 chủ đề
+# #1 number of threads or solitary messages selected
+# example: 4 conversations
+NConversations=#1 hội thoại; #1 hội thoại
 
 numMsgs=#1 thư;#1 thư
 countUnread=, #1 chưa đọc;, #1 chưa đọc
