--- a/vi/mail/chrome/messenger/preferences/preferences.properties
+++ b/vi/mail/chrome/messenger/preferences/preferences.properties
@@ -33,7 +33,7 @@ actionsAll=Tự động thực hiện Thao tác được gán cho mỗi kiểu t
 
 #### Change Action
 extensionStringFormat=%S, %S
-fpTitleChooseApp=Chọn Ứng dụng Trợ giúp
+fpTitleChooseApp=Chọn Chương trình Trợ giúp
 fpTitleChooseDL=Chọn thư mục Tải xuống
 
 #### Sound Notifications
