--- a/vi/mail/chrome/messenger/messenger.properties
+++ b/vi/mail/chrome/messenger/messenger.properties
@@ -421,10 +421,10 @@ updatesItem_default=Tìm bản Cập nhật…
 updatesItem_defaultFallback=Tìm bản Cập nhật…
 updatesItem_downloading=Đang tải %S…
 updatesItem_downloadingFallback=Đang tải Cập nhật…
-updatesItem_resume=Tiếp tục Tải %S…
-updatesItem_resumeFallback=Tiếp tục Tải Cập nhật…
-updatesItem_pending=Áp dụng Bản cập nhật Đã tải Ngay…
-updatesItem_pendingFallback=Áp dụng Bản cập nhật Đã tải Ngay…
+updatesItem_resume=Tiếp tục Tải xuống %S…
+updatesItem_resumeFallback=Tiếp tục Tải xuống Cập nhật…
+updatesItem_pending=Cài đặt Bản cập nhật Vừa tải Ngay…
+updatesItem_pendingFallback=Cài đặt Bản cập nhật Vừa tải Ngay…
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Tất cả Thư mục
@@ -474,8 +474,8 @@ fileNotFoundMsg = Tập tin %S không tồn tại.
 # the user is in the To or Cc field of a message
 headerFieldYou=Bạn
 
-# The what's new tab title, shown on version update
-whatsNew=Có Gì Mới
+# Shown when content tabs are being loaded.
+loadingTab=Đang mở…
 
 applyToCollapsedMsgsTitle=Xác nhận Xóa các Thư trong Chủ đề Thu gọn
 applyToCollapsedMsgs=Cảnh báo – bạn sẽ xóa các thư trong chủ đề thu gọn
