many updates, especially for TB

--- a/vi/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/vi/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -149,6 +149,12 @@ monthlyDayOfNth=ngày %1$S của mỗi tháng;ngày %1$S của mỗi #2 tháng
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=ngày cuối của mỗi tháng;ngày cuối của mỗi #1 tháng
 
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=mỗi ngày của mỗi tháng;mỗi ngày của mỗi #2 tháng
+
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
 # considered in 'repeatDetailsDayxNounclass' strings. For languages that need
