--- a/vi/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/vi/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -172,7 +172,7 @@
 # filters is attempted to be imported.  Outgoing filters are ones which are
 # processed when a message is being sent, and are not supported.
 
-2019=không thể nhập ngữ cảnh bộ lọc gửi thư
+2019=không thể nhập bối cảnh bộ lọc gửi thư
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_ACTION
