--- a/vi/mail/chrome/messenger/filter.properties
+++ b/vi/mail/chrome/messenger/filter.properties
@@ -17,6 +17,8 @@ stopButtonLabel=Dừng
 continueButtonLabel=Tiếp tục
 cannotEnableFilter=Bộ lọc này có thể đã được tạo bởi phiên bản tương lai của mozilla/netscape. Bạn không thể kích hoạt bộ lọc này vì chúng tôi không biết áp dụng nó như thế nào.
 dontWarnAboutDeleteCheckbox=Đừng hỏi lại tôi
+searchTermsInvalidTitle=Thuật ngữ Tìm kiếm Không hợp lệ
+searchTermsInvalidMessage=Không thể lưu bộ lọc này vì một số thuật ngữ tìm kiếm không hợp lệ trong bối cảnh hiện hành.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
