--- a/vi/mail/chrome/messenger/messenger.properties
+++ b/vi/mail/chrome/messenger/messenger.properties
@@ -417,14 +417,20 @@ confirmPhishingTitle=Báo động Lừa đảo Email
 confirmPhishingUrl=%1$S nghĩ rằng thư này là thư lừa đảo. Liên kết trong thư có thể sẽ cố mạo danh trang web mà bạn muốn vào. Bạn có chắc là bạn muốn vào %2$S không?
 
 # Check for Updates
+# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
+# Which one is used depends on Update process state.
 updatesItem_default=Tìm bản Cập nhật…
 updatesItem_defaultFallback=Tìm bản Cập nhật…
+updatesItem_default.accesskey=C
 updatesItem_downloading=Đang tải %S…
 updatesItem_downloadingFallback=Đang tải Cập nhật…
+updatesItem_downloading.accesskey=a
 updatesItem_resume=Tiếp tục Tải xuống %S…
 updatesItem_resumeFallback=Tiếp tục Tải xuống Cập nhật…
+updatesItem_resume.accesskey=T
 updatesItem_pending=Cài đặt Bản cập nhật Vừa tải Ngay…
 updatesItem_pendingFallback=Cài đặt Bản cập nhật Vừa tải Ngay…
+updatesItem_pending.accesskey=C
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Tất cả Thư mục
@@ -469,6 +475,10 @@ processingJunkMessages=Đang xử lí Thư rác
 fileNotFoundTitle = Không tìm thấy Tập tin
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg = Tập tin %S không tồn tại.
+
+fileEmptyTitle = Tập tin Rỗng
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = Tập tin %S rỗng.
 
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
