--- a/vi/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/vi/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,17 +274,20 @@ chooseFileToAttach=Đính kèm Tập tin
 ##
 windowTitlePrefix=Viết thư:
 
-## String used by the empty subject dialog
+## Strings used by the empty subject dialog
 subjectEmptyTitle=Nhắc về Tiêu đề
 subjectEmptyMessage=Thư này chưa có tiêu đề.
 sendWithEmptySubjectButton=&Gửi thư Không có Tiêu đề
 cancelSendingButton=&Hủy việc Gửi
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Nhóm tin Không được Hỗ trợ
 recipientDlogMessage=Tài khoản này chỉ hỗ trợ người nhận email. Nếu tiếp tục thì sẽ bỏ qua nhóm tin.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Địa chỉ Người nhận Không hợp lệ
 addressInvalid=%1$S không phải là một địa chỉ email hợp lệ vì nó không có dạng ngườidùng@tênmiền. Bạn phải sửa lại trước khi gửi e-mail.
+
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Vui lòng chọn địa chỉ để đính kèm
 attachPageDlogMessage=Trang Web (URL):
@@ -333,7 +336,7 @@ renameAttachmentMessage=Tên phần đính kèm mới:
 ## Attachment Reminder
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
-mail.compose.attachment_reminder_keywords=đính kèm,gửi kèm,gởi kèm,attach,attachment,.doc,.pdf,lý lịch,lí lịch,resume,résumé,bản cv,tờ cv,thư xin việc
+mail.compose.attachment_reminder_keywords=.doc,.pdf,gửi,đính,kèm,CV
 attachmentReminderTitle=Nhắc về Đính kèm
 attachmentReminderMsg=Bạn có quên thêm phần đính kèm?
 attachmentReminderYesIForgot=Chà, Tôi Quên Mất!
