--- a/vi/mail/chrome/messenger/preferences/preferences.properties
+++ b/vi/mail/chrome/messenger/preferences/preferences.properties
@@ -15,26 +15,31 @@ confirmResetJunkTrainingText=Bạn có chắc là bạn muốn đặt lại các
 #### Downloads
 desktopFolderName=Desktop
 myDownloadsFolderName=My Downloads
-chooseDownloadFolderTitle=Chọn Thư mục Tải xuống:
+chooseAttachmentsFolderTitle=Chọn Thư Mục
 
-#### Download Actions
-extensionNone=(KHÔNG)
-removeButtonSingle=Xóa Thao Tác
-removeButtonMultiple=Xóa Thao Tác
-removeTitleSingle=Xóa Thao Tác
-removeTitleMultiple=Xóa Thao Tác
-removeMessageSingle=Thao tác đã chọn sẽ không được thực hiện khi tập tin của các kiểu liên quan được tải xuống. Bạn có chắc là bạn muốn xóa Thao tác này không?
-removeMessageMultiple=Các Thao tác đã chọn sẽ không được thực hiện khi tập tin của các kiểu liên quan được tải xuống. Bạn có chắc là bạn muốn xóa các Thao tác này không?
+#### Applications
+
 fileEnding=Tập tin %S
-saveToDisk=Lưu vào Ổ đĩa
-openWith=Mở bằng %S
-actionsFiltered=Các Thao tác sau khớp với kết quả tìm kiếm:
-actionsAll=Tự động thực hiện Thao tác được gán cho mỗi kiểu tập tin sau đây:
+saveFile=Lưu Tập Tin
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=Dùng %S
+useDefault=Dùng %S (mặc định)
+
+useOtherApp=Dùng chương trình khác…
 fpTitleChooseApp=Chọn Chương trình Trợ giúp
-fpTitleChooseDL=Chọn thư mục Tải xuống
+manageApp=Chi tiết Chương trình…
+alwaysAsk=Luôn hỏi
+
+# LOCALIZATION NOTE (usePluginIn):
+# %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+# %2$S = brandShortName from brand.properties (for example "Shredder")
+usePluginIn=Dùng %1$S (trong %2$S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Chọn Âm Thanh
