--- a/vi/mail/chrome/messenger/vcard.properties
+++ b/vi/mail/chrome/messenger/vcard.properties
@@ -212,7 +212,7 @@
 # VCARD_LDAP_GEO
 ## @name VCARD_LDAP_GEO
 ## @loc None
-1034=Vị trí Địa lý
+1034=Vị trí Địa lí
 
 # VCARD_LDAP_SOUND
 ## @name VCARD_LDAP_SOUND
