--- a/vi/mail/installer/override.properties
+++ b/vi/mail/installer/override.properties
@@ -67,9 +67,9 @@ CancelBtn=Hủy bỏ
 CloseBtn=Đón&g
 BrowseBtn=&Duyệt…
 ShowDetailsBtn=&Hiện chi tiết
-ClickNext=Nhấn Tiếp Tục để tiếp tục.
-ClickInstall=Nhấn Cài đặt để bắt đầu cài đặt.
-ClickUninstall=Nhấn Gỡ bỏ để bắt đầu gỡ bỏ.
+ClickNext=Nhấn “Tiếp tục” để tiếp tục.\n\nNếu chưa hiểu rõ các thuật ngữ tiếng Việt trong phiên bản này, xin hãy gửi câu hỏi tới Cục trưởng Cục Công nghệ Thông tin, Bộ Giáo dục và Đào tạo - TS Quách Tuấn Ngọc:\nqtngoc@moet.gov.vn\n.
+ClickInstall=Nhấn “Cài đặt” để bắt đầu cài đặt.
+ClickUninstall=Nhấn “Gỡ bỏ” để bắt đầu gỡ bỏ.
 Completed=Hoàn tất
 LicenseTextRB=Vui lòng xem thỏa thuận giấy phép trước khi cài đặt $BrandFullNameDA. Nếu bạn chấp nhận tất cả điều khoản của bản thỏa thuận, hãy chọn ô đầu tiên bên dưới. $_CLICK
 ComponentsText=Chọn các thành phần bạn muốn cài đặt và bỏ chọn các thành phần mà bạn không muốn. $_CLICK
@@ -81,8 +81,8 @@ SpaceAvailable="Dung lượng hiện có: "
 SpaceRequired="Dung lượng yêu cầu: "
 UninstallingText=$BrandFullNameDA sẽ được gỡ bỏ khỏi thư mục sau. $_CLICK
 UninstallingSubText=Đang gỡ bỏ khỏi:
-FileError=Gặp lỗi khi mở tập tin để ghi: \r\n\r\n$0\r\n\r\nNhấn Hủy Bỏ để ngừng cài đặt,\r\nThử Lại để thử lần nữa, hoặc\r\nBỏ Qua để bỏ qua tập tin này.
-FileError_NoIgnore=Gặp lỗi khi mở tập tin để ghi: \r\n\r\n$0\r\n\r\nNhấn Thử Lại để thử lần nữa, hoặc\r\nHủy Bỏ để ngừng việc cài đặt.
+FileError=Gặp lỗi khi mở tập tin để ghi: \r\n\r\n$0\r\n\r\nNhấn “Hủy bỏ” (Cancel) để dừng cài đặt,\r\n“Thử lại” (Retry) để thử lần nữa, hoặc\r\n“Bỏ qua” (Ignore) để bỏ qua tập tin này.
+FileError_NoIgnore=Gặp lỗi khi mở tập tin để ghi: \r\n\r\n$0\r\n\r\nNhấn “Thử lại” (Retry) để thử lần nữa, hoặc\r\n“Hủy bỏ” (Cancel) để dừng việc cài đặt.
 CantWrite="Không thể ghi: "
 CopyFailed=Thao tác sao chép bị thất bại
 CopyTo="Chép tới "
