--- a/vi/calendar/chrome/calendar/calendar.properties
+++ b/vi/calendar/chrome/calendar/calendar.properties
@@ -364,11 +364,11 @@ pw_change_failed_title=Thay đổi Mật khẩu Thất bại
 updatesItem_default=Tìm bản Cập nhật…
 updatesItem_defaultFallback=Tìm bản Cập nhật…
 updatesItem_downloading=Đang tải %S…
-updatesItem_downloadingFallback=Đang tải bản Cập nhật…
+updatesItem_downloadingFallback=Đang tải Cập nhật…
 updatesItem_resume=Tiếp tục Tải xuống %S…
-updatesItem_resumeFallback=Tiếp tục Tải xuống bản Cập nhật…
-updatesItem_pending=Cài bản Cập nhật đã Tải xuống Ngay…
-updatesItem_pendingFallback=Cài bản Cập nhật đã Tải xuống Ngay…
+updatesItem_resumeFallback=Tiếp tục Tải xuống Cập nhật…
+updatesItem_pending=Cài đặt Bản cập nhật Vừa tải Ngay…
+updatesItem_pendingFallback=Cài đặt Bản cập nhật Vừa tải Ngay…
 
 # Alarm Dialog
 # LOCALIZATION NOTE (alarmWindowTitle.label): Semi-colon list of plural
@@ -566,8 +566,11 @@ datetimeIntervalTaskWithoutDueDate=ngày bắt đầu %1$S %2$S
 datetimeIntervalTaskWithoutStartDate=ngày đến hạn %1$S %2$S
 
 deleteTaskLabel=Xóa Tác Vụ
+deleteTaskMessage=Bạn có thật sự muốn xóa Tác vụ này không?
 deleteTaskAccesskey=X
 deleteItemLabel=Xóa
+deleteItemMessage=Bạn có thật sự muốn xóa Mục này không?
 deleteItemAccesskey=X
 deleteEventLabel=Xóa Sự Kiện
+deleteEventMessage=Bạn có thật sự muốn xóa Sự kiện này không?
 deleteEventAccesskey=X
