--- a/vi/mail/chrome/messenger/activity.properties
+++ b/vi/mail/chrome/messenger/activity.properties
@@ -45,8 +45,8 @@ autosyncEventStatusTextNoMsgs=Không có thư nào được tải
 autosyncContextDisplayText=Đang đồng bộ: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Đã xóa #1 thư;Đã xóa #1 thư
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=Đã xóa #1 thư khỏi #2;Đã xóa #1 thư khỏi #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Đã di chuyển #1 thư từ #2 sang #3;Đã di chuyển #1 thư từ #2 sang #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
