--- a/vi/mail/chrome/messenger/imapMsgs.properties
+++ b/vi/mail/chrome/messenger/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Đăng nhập bị Thất bại
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Đăng nhập vào máy chủ %S bị thất bại.
+imapLoginFailedRetryButton=&Thử lại
+imapLoginFailedEnterNewPasswordButton=&Nhập Mật Khẩu Mới
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -130,27 +137,6 @@
 ## @loc None
 5015=Đang tải thư…
 
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Đang kiểm tra Không gian tên IMAP…
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021="Máy chủ thư nhận thấy có thể bạn không có thư mục thư cá nhân nào. Vui lòng xác minh lại các đăng kí của bạn.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Các thư mục không được theo dõi sẽ không xuất hiện trong danh sách thư mục của bạn, nhưng vẫn có thể theo dõi sau bằng cách chọn Tập tin / Theo dõi.
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Vui lòng chọn thư mục mà bạn muốn theo dõi trong cửa sổ Theo dõi…
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=Nâng cấp thành công.
-
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
@@ -167,20 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Phần nội dung này sẽ được tải theo ý muốn.
-
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=Lỗi IMAP: Không thể lưu thư vì một lỗi.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=Lỗi IMAP: Không thể lấy thông tin thư mục trực tuyến.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Đăng nhập vào máy chủ %S bị thất bại.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
@@ -227,12 +199,6 @@
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
 5043=Đang chép thư tới %S…
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Đang mở thư mục %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
@@ -380,10 +346,6 @@
 ## @loc None
 5082=Quản trị Thư mục
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Không rõ
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Máy chủ này không hỗ trợ thư mục chia sẻ.
@@ -395,10 +357,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090= Máy chủ %S đã ngắt kết nối. Máy chủ có thể đang bị sập hoặc do có vấn đề ở hệ thống mạng.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Đăng nhập bị thất bại.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Bạn có muốn theo dõi %1$S?
@@ -436,10 +394,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Đang Chép Thư %1$S trên tổng %2$S tới %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Bạn không thể đăng nhập vào %S vì máy chủ đã vô hiệu hóa đăng nhập. Có thể bạn cần kết nối thông qua SSL hoặc TLS. Vui lòng kiểm tra thiết lập tài khoản cho máy chủ thư.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -459,3 +413,8 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Xóa Thư Mục
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Bạn không có thể đăng nhập vào %S vì máy chủ không cho phép xác thực an toàn mà không có STARTTLS hoặc SSL/TLS. Hãy thử kích hoạt kết nối an toàn hoặc xác thực an toàn trong thiết lập tài khoản.
