--- a/vi/mail/chrome/messenger/search-attributes.properties
+++ b/vi/mail/chrome/messenger/search-attributes.properties
@@ -38,3 +38,4 @@ AttachmentStatus=Trạng thái Phần đính kèm
 JunkStatus=Trạng thái Thư rác
 Label=Nhãn
 Customize=Tùy biến…
+MissingCustomTerm=Thuật ngữ Tùy biến Đang thiếu
