--- a/vi/mail/chrome/messenger/search.properties
+++ b/vi/mail/chrome/messenger/search.properties
@@ -21,3 +21,7 @@ labelForSearchButton.accesskey=m
 
 moreButtonTooltipText=Thêm một quy luật mới
 lessButtonTooltipText=Xóa quy luật này
+
+# LOCALIZATION NOTE (glodaSearchTabTitle): The title to use for global database
+#  search tabs.  Include "%S" where you want the search string to be inserted.
+glodaSearchTabTitle=Tìm kiếm: %S
