--- a/vi/mail/installer/custom.properties
+++ b/vi/mail/installer/custom.properties
@@ -65,8 +65,8 @@ SUMMARY_INSTALLED_TO=$BrandShortName sẽ được cài vào thư mục sau:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Có thể cần khởi động lại máy tính để hoàn tất việc cài đặt.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Có thể cần khởi động lại máy tính để hoàn tất việc gỡ bỏ.
 SUMMARY_MAKE_DEFAULT=$BrandShortName sẽ được thiết lập là chương trình gửi thư mặc định của bạn.
-SUMMARY_CLICK=Nhấn Cài Đặt để tiếp tục.
-SURVEY_TEXT=&Nói cho chúng tôi biết bạn nghĩ gì về $BrandShortName
+SUMMARY_CLICK=Nhấn “Cài đặt” để tiếp tục.
+SURVEY_TEXT=&Vui lòng cho chúng tôi biết bạn nghĩ gì về $BrandShortName
 LAUNCH_TEXT=&Chạy $BrandShortName ngay bây giờ
 CREATE_ICONS_DESC=Tạo biểu tượng cho $BrandShortName:
 ICONS_DESKTOP=Trên &Desktop
@@ -81,12 +81,12 @@ WARN_MIN_SUPPORTED_OS_MSG=Xin lỗi, $BrandShortName không thể cài được.
 WARN_RESTART_REQUIRED_UNINSTALL=Máy tính của bạn phải được khởi động lại để hoàn tất việc gỡ bỏ $BrandShortName. Bạn có muốn khởi động lại ngay bây giờ?
 WARN_RESTART_REQUIRED_UPGRADE=Máy tính của bạn phải được khởi động lại để hoàn tất việc nâng cấp $BrandShortName. Bạn có muốn khởi động lại ngay bây giờ?
 ERROR_CREATE_DIRECTORY_PREFIX=Gặp lỗi khi tạo thư mục:
-ERROR_CREATE_DIRECTORY_SUFFIX=Nhấn Hủy Bỏ để ngừng việc cài đặt hoặc\nThử lại để thử lần nữa.
+ERROR_CREATE_DIRECTORY_SUFFIX=Nhấn “Hủy bỏ” (Cancel) để dừng việc cài đặt hoặc\n“Thử lại” (Retry) để thử lần nữa.
 
 UN_CONFIRM_PAGE_TITLE=Gỡ bỏ $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Gỡ bỏ $BrandFullName khỏi máy bạn.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName sẽ được gỡ bỏ khỏi thư mục sau:
-UN_CONFIRM_CLICK=Nhấn Gỡ Bỏ để tiếp tục.
+UN_CONFIRM_CLICK=Nhấn “Gỡ bỏ” để tiếp tục.
 
 BANNER_CHECK_EXISTING=Đang kiểm tra phiên bản đã được cài trên máy…
 
@@ -97,10 +97,10 @@ STATUS_CLEANUP=Dọn dẹp lồng chim một chút…
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Chọn kiểu cài đặt bạn muốn, rồi nhấn Tiếp Tục.
+OPTIONS_SUMMARY=Chọn kiểu cài đặt bạn muốn, rồi nhấn “Tiếp tục”.
 # One line
 OPTION_STANDARD_DESC=$BrandShortName sẽ được cài đặt cùng các tùy chọn thông dụng.
 OPTION_STANDARD_RADIO=&Chuẩn
 # Two lines
-OPTION_CUSTOM_DESC=Bạn có thể chọn từng tùy chọn riêng lẻ. Khuyên dùng cho người có kinh nghiệm.
+OPTION_CUSTOM_DESC=Bạn có thể chọn từng tùy chọn riêng lẻ. Dành cho người dùng có kinh nghiệm.
 OPTION_CUSTOM_RADIO=Tùy &biến
