--- a/vi/mail/installer/mui.properties
+++ b/vi/mail/installer/mui.properties
@@ -52,14 +52,14 @@
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
-MUI_TEXT_WELCOME_INFO_TITLE=Chào mừng đến với Trình thuật sĩ Cài đặt $BrandFullNameDA
-MUI_TEXT_WELCOME_INFO_TEXT=Trình thuật sĩ sẽ hướng dẫn bạn việc cài đặt $BrandFullNameDA.\n\nBạn nên đóng tất cả các chương trình khác trước khi bắt đầu Cài đặt. Điều này sẽ giúp việc cập nhật các tập tin hệ thống có thể thực hiện được mà không cần phải khởi động lại.\n\n$_CLICK
+MUI_TEXT_WELCOME_INFO_TITLE=Chào mừng đến với “Pháp sư Cài đặt” $BrandFullNameDA
+MUI_TEXT_WELCOME_INFO_TEXT=Trình pháp sư này sẽ hướng dẫn bạn việc cài đặt $BrandFullNameDA.\n\nBạn nên đóng tất cả các chương trình khác trước khi bắt đầu Cài đặt. Điều này sẽ giúp việc cập nhật các tập tin hệ thống có thể thực hiện được mà không cần phải khởi động lại.\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Chọn các Thành phần
-MUI_TEXT_COMPONENTS_SUBTITLE=Chọn những tính năng của $BrandFullNameDA mà bạn muốn cài.
+MUI_TEXT_COMPONENTS_SUBTITLE=Chọn những tính năng của $BrandFullNameDA mà bạn muốn cài đặt.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Mô tả
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Di chuột trên một thành phần để thấy mô tả của nó.
 MUI_TEXT_DIRECTORY_TITLE=Chọn nơi Cài đặt
-MUI_TEXT_DIRECTORY_SUBTITLE=Chọn thư mục để cài $BrandFullNameDA.
+MUI_TEXT_DIRECTORY_SUBTITLE=Chọn thư mục để cài đặt $BrandFullNameDA.
 MUI_TEXT_INSTALLING_TITLE=Đang cài đặt
 MUI_TEXT_INSTALLING_SUBTITLE=Vui lòng chờ trong khi $BrandFullNameDA đang được cài đặt.
 MUI_TEXT_FINISH_TITLE=Cài đặt Hoàn tất
@@ -67,26 +67,26 @@ MUI_TEXT_FINISH_SUBTITLE=Cài đặt thành công.
 MUI_TEXT_ABORT_TITLE=Cài đặt bị Hủy bỏ
 MUI_TEXT_ABORT_SUBTITLE=Cài đặt không thành công.
 MUI_BUTTONTEXT_FINISH=&Hoàn thành
-MUI_TEXT_FINISH_INFO_TITLE=Hoàn tất Trình thuật sĩ Cài đặt $BrandFullNameDA
-MUI_TEXT_FINISH_INFO_TEXT=$BrandFullNameDA đã được cài vào máy bạn.\n\nNhấn Hoàn Thành để đóng trình thuật sĩ.
+MUI_TEXT_FINISH_INFO_TITLE=Hoàn tất “Pháp sư Cài đặt” $BrandFullNameDA
+MUI_TEXT_FINISH_INFO_TEXT=$BrandFullNameDA đã được cài vào máy bạn.\n\nNhấn “Hoàn thành” để đóng trình pháp sư này.
 MUI_TEXT_FINISH_INFO_REBOOT=Máy tính phải được khởi động lại để có thể hoàn tất việc cài đặt $BrandFullNameDA. Bạn có muốn khởi động lại ngay bây giờ?
 MUI_TEXT_FINISH_REBOOTNOW=Khởi động lại ngay
 MUI_TEXT_FINISH_REBOOTLATER=Tôi muốn khởi động lại sau
 MUI_TEXT_STARTMENU_TITLE=Chọn Thư mục Trình đơn Start
-MUI_TEXT_STARTMENU_SUBTITLE=Chọn một thư mục trong Trình đơn Start để tạo lối tắt cho $BrandFullNameDA.
-MUI_INNERTEXT_STARTMENU_TOP=Chọn thư mục trong Trình đơn Start bạn muốn để tạo lối tắt cho chương trình. Bạn cũng có thể nhập tên để tạo thư mục mới.
-MUI_TEXT_ABORTWARNING=Bạn có chắc bạn muốn thoát trình Cài đặt $BrandFullName?
-MUI_UNTEXT_WELCOME_INFO_TITLE=Chào mừng đến với Trình thuật sĩ Gỡ bỏ $BrandFullNameDA
-MUI_UNTEXT_WELCOME_INFO_TEXT=Trình thuật sĩ này sẽ giúp bạn gỡ bỏ $BrandFullNameDA.\n\nTrước khi bắt đầu gỡ bỏ, hãy chắc chắn $BrandFullNameDA đang không chạy.\n\n$_CLICK
+MUI_TEXT_STARTMENU_SUBTITLE=Chọn một thư mục trên Trình đơn Start cho các lối tắt của $BrandFullNameDA.
+MUI_INNERTEXT_STARTMENU_TOP=Chọn thư mục trên Trình đơn Start mà bạn muốn dùng để tạo lối tắt cho chương trình. Bạn cũng có thể nhập tên để tạo thư mục mới.
+MUI_TEXT_ABORTWARNING=Bạn có thật sự muốn thoát trình Cài đặt $BrandFullName?
+MUI_UNTEXT_WELCOME_INFO_TITLE=Chào mừng đến với “Pháp sư Gỡ bỏ” $BrandFullNameDA
+MUI_UNTEXT_WELCOME_INFO_TEXT=Trình pháp sư này sẽ giúp bạn gỡ bỏ $BrandFullNameDA.\n\nTrước khi bắt đầu gỡ bỏ, hãy chắc chắn rằng $BrandFullNameDA đang không chạy.\n\n$_CLICK
 MUI_UNTEXT_CONFIRM_TITLE=Gỡ bỏ $BrandFullNameDA
 MUI_UNTEXT_CONFIRM_SUBTITLE=Gỡ bỏ $BrandFullNameDA khỏi máy bạn.
 MUI_UNTEXT_UNINSTALLING_TITLE=Đang gỡ bỏ
 MUI_UNTEXT_UNINSTALLING_SUBTITLE=Vui lòng chờ trong khi $BrandFullNameDA đang được gỡ bỏ.
 MUI_UNTEXT_FINISH_TITLE=Gỡ bỏ Hoàn tất
 MUI_UNTEXT_FINISH_SUBTITLE=Gỡ bỏ đã thành công.
-MUI_UNTEXT_ABORT_TITLE=Gỡ bỏ bị Hủy bỏ
+MUI_UNTEXT_ABORT_TITLE=Uninstallation Aborted
 MUI_UNTEXT_ABORT_SUBTITLE=Gỡ bỏ không thành công.
-MUI_UNTEXT_FINISH_INFO_TITLE=Hoàn tất Trình thuật sĩ Gỡ bỏ $BrandFullNameDA
-MUI_UNTEXT_FINISH_INFO_TEXT=$BrandFullNameDA đã được gỡ bỏ khỏi máy bạn.\n\nNhấn Hoàn Thành để đóng trình thuật sĩ này.
+MUI_UNTEXT_FINISH_INFO_TITLE=Hoàn tất “Pháp sư Gỡ bỏ” $BrandFullNameDA
+MUI_UNTEXT_FINISH_INFO_TEXT=$BrandFullNameDA đã được gỡ bỏ khỏi máy bạn.\n\nNhấn “Hoàn thành” để đóng trình pháp sư này.
 MUI_UNTEXT_FINISH_INFO_REBOOT=Máy tính phải được khởi động lại để có thể hoàn tất việc gỡ bỏ $BrandFullNameDA. Bạn có muốn khởi động lại ngay bây giờ?
-MUI_UNTEXT_ABORTWARNING=Bạn có chắc bạn muốn thoát trình Gỡ bỏ $BrandFullName?
+MUI_UNTEXT_ABORTWARNING=Bạn có thật sự muốn thoát trình Gỡ bỏ $BrandFullName?
