fixing quotes in mail

--- a/gd/mail/chrome/messenger/messenger.properties
+++ b/gd/mail/chrome/messenger/messenger.properties
@@ -331,7 +331,7 @@ saveLabelAccesskey=a
 detachLabel=Dealaich…
 detachLabelAccesskey=D
 deleteLabel=Sguab às
-deleteLabelAccesskey=e
+deleteLabelAccesskey=S
 deleteAttachments=Thèid na ceanglachain a leanas a sguabadh às on teachdaireachd seo:\n%S\nChan urrainn dhut seo a neo-dhèanamh. A bheil thu airson leantainn air adhart?
 detachAttachments=Chaidh na ceanglachain a leanas a shàbhaladh gu soirbheachail 's thèid an sguabadh às gu buan on teachdaireachd seo a-nis:\n%S\nChan urrainn dhut seo a neo-dhèanamh. A bheil thu airson leantainn air adhart?
 deleteAttachmentFailure=Dh'fhàillig sguabadh às nan ceanglachan a thagh thu.
@@ -600,6 +600,6 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Chaidh coltas ùr a stàladh.
 lwthemePostInstallNotification.undoButton=Neo-dhèan
-lwthemePostInstallNotification.undoButton.accesskey=u
+lwthemePostInstallNotification.undoButton.accesskey=N
 lwthemePostInstallNotification.manageButton=Rianaich na coltasan…
 lwthemePostInstallNotification.manageButton.accesskey=R
